# multi_drone_platform

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  gen_msgs_for_matlab.m  package.xml
GUI/: #commander.glade#  commander.glade  commander.glade~  debugWindow.glade~  part1.glade
GUI/UI/: debugWindow.glade  debugWindow.glade~
GUI/debugWindow/: base.cpp  debug.ui  debug.ui~  debugApplication.cpp  debugApplication.h  debugNode.cpp  debugUI.cpp  debugUI.h  debugWindow.glade~
Results/Collision Avoidance/advanced_trad/: AllPlots.fig  data.mat  drone_0.txt  drone_1.txt  drone_2.txt  drone_5.txt
Results/Collision Avoidance/advanced_trad2/: AllPlots.fig  data.mat  drone_1.txt  drone_2.txt  drone_5.txt
Results/Collision Avoidance/advanced_vel/: drone_0.txt  drone_1.txt  drone_3.txt
Results/Collision Avoidance/complex_trad/: data.mat  drone_0.txt  drone_2.txt  drone_4.txt  drone_5.txt
Results/Collision Avoidance/complex_vel/: data.mat  drone_0.txt  drone_2.txt  drone_3.txt  drone_4.txt
Results/Collision Avoidance/fast_trad/: data.mat  drone_0.txt
Results/Collision Avoidance/fast_vel/: AllPlots.fig  data.mat
Results/Collision Avoidance/pos control/: AllPlots.fig  drone_1.txt  drone_2.txt
Results/Collision Avoidance/slow_trad/: AllPlots.fig  data.mat  drone_0.txt
Results/Collision Avoidance/slow_vel/: AllPlots.fig
Results/Traditional/Slow Run/: AllPlots.fig  data.mat  drone_1.txt  drone_2.txt  drone_4.txt
Results/VPF/Slow Run/: data.mat  drone_0.txt  drone_3.txt  drone_4.txt
Results/VPF/Slow Run 2/: AllPlots.fig  data.mat  drone_2.txt
Results/advanced_trad/: drone_3.txt  drone_4.txt
Results/advanced_trad2/: drone_0.txt  drone_3.txt  drone_4.txt
Results/advanced_vel/: AllPlots.fig  data.mat  drone_2.txt  drone_4.txt  drone_5.txt
Results/complex_trad/: AllPlots.fig  drone_1.txt  drone_3.txt
Results/complex_vel/: AllPlots.fig  drone_1.txt  drone_5.txt
Results/fast_trad/: AllPlots.fig  drone_1.txt
Results/fast_vel/: drone_0.txt  drone_1.txt
Results/pos control/: data.mat  drone_0.txt  drone_3.txt  drone_4.txt
Results/slow_trad/: drone_1.txt
Results/slow_vel/: data.mat  drone_0.txt  drone_1.txt
documentation/doxygen/: readme.txt
example/: exampleVisualisation.rviz  five_vflies.sh  matlab_data.sh  six_vflies.sh  three_vflies.sh  two_vflies.sh
include/: constants.h  debugApplication.h  debugUI.h  debug_window.h  drone_server.h  logger.h  rigidBody.h  rigidbody.h  user_api.h  wrappers.h
launch/PS4_control/: ps4.launch  ps4_and_server.launch
launch/crazyflie/: crazyflie_server.launch
launch/debugWindow/: debugWindow.launch
launch/demonstrations/: demo101019.launch
launch/drone_server/: drone_server.launch
launch/rigidBodies/: vrpn.launch  vrpn_setFrame.launch
launch/teleop_control/: follow.launch  teleop.launch
launch/vec_creation/: rigidBodies.rviz  vrpn.launch
launch/virtualflie/: virtualflie.launch  virtualflie.rviz
matlab/: mdp_api.m  mdp_drone_data.m  mdp_drone_set.m  mdp_flight_state.m  mdp_id.m  mdp_position_data.m  mdp_position_msg.m  mdp_timings.m  mdp_velocity_data.m  mdp_velocity_msg.m  test_program.m
matlab/scripts/: matlab_demo.m  matlab_demo_290320.m  mdp_drone_graphing.m  mdp_gen_graphing.m  rosoutput.txt
msg/: apiUpdate.msg  api_update.msg  droneLog.msg  inputAPI.msg  inputData.msg  log.msg  mdpID.msg  movementFeedback.msg
scripts/: advanced_collision.cpp  complex_collision.cpp  demoWk10.cpp  demo_19Oct2019.cpp  dummy_parameters.cpp  emergency_program.cpp  follow_the_leader_demo.cpp  publish_external_position_vrpn.py  simple_collision.cpp  simple_collision_fast.cpp  simple_collision_slow.cpp  static_obstacle.cpp  testCollisionAvoidance.cpp  testPosControl.cpp  testVelControl.cpp  test_pos_control.cpp  test_program_19Oct2019.cpp  test_user_api_program.cpp  user_api_example.cpp  velocity_control.cpp  yaw_control.cpp
src/: listener.cpp  temp.cpp
src/Model Wrappers/: cflie.cpp  crazyflie.cpp  droneWrapper.h
src/PS4_control/: ps4output.cpp  ps4teleop.cpp
src/collision_management/: potential_fields.cpp  potential_fields.h  static_physical_management.cpp  static_physical_management.h  utility_functions.cpp
src/collision_management/better APF/: potential_fields.cpp
src/collision_management/potential_fields_version_1/: potential_fields.cpp
src/collision_management/traditional/: potential_fields.cpp
src/debug/commander_app/: #commander.ui#  commander.h  commander.ui  debug_app.h
src/debug/debug_app/: #commander.ui#  #debug.ui#  commander.ui  commander.ui~  debug.ui  debug.ui~  debugRedesign.ui~  debugWindow.glade~  debug_app.cpp  debug_app.h  debug_app_BACKUP_15001.cpp  debug_app_test.cpp  debug_node.cpp  debug_window.cpp  debug_window.h  gtk_ref.h
src/debug/debug_window/: debug.ui  debugAppTest.cpp  debugApplication.cpp  debugApplication.h  (+3 more)
src/drone_server/: add_drone.cpp  collision_management.cpp  collision_management.h  drone_server.cpp  drone_server.h  drone_server_msg_translations.cpp  element_conversions.cpp  emergency_program.cpp  gen_wrappers_h.py  rigidbody.cpp  shutdown_drone_server.cpp  test_drone_server.cpp  wrappers.h
src/icp_implementation/: icp_impl.cpp  icp_impl.h  icp_object.cpp  icp_object.h  icp_test.cpp  kd_tree_3d.cpp  kd_tree_3d.h
src/objects/: ROSWrapper.txt  drone.h  elementConversions.cpp  element_conversions.cpp  nodeData.cpp  nodeData.h  position.cpp  position.h  rigidBody.cpp  rigidBody.h  rigidBodyTest.cpp  rigidbody.cpp  velocity.cpp  velocity.h
src/teleop_control/: ps4teleop.cpp  teleop.cpp  teleop.h  teleop_test.cpp
src/testing/: 5CFSample.csv  fakeOptitrack.cpp
src/user_api/: basicTwoDroneTest.cpp  emergency_program.cpp  exposed_decl.pypp.txt  mdp_api.cpp  pythonLibGen.py  pythonWrapper.cpp  test_program_19Oct2019.cpp  test_user_api_program.cpp  user_api.cpp
src/virtualflie/: joyflie.cpp  virtualflie.cpp
src/wrappers/: cflie.cpp  drone.cpp  object.cpp  tello.cpp  testdrone.cpp  vflie.cpp
srv/: add_drone.srv  droneFeedbackSRV.srv  movementFeedbackSRV.srv  rigidbodyListSRV.srv
wrappers/: cflie.cpp  object.cpp  tello.cpp  vflie.cpp  window.cpp
(+11 files in other folders)
